<resources>
    <string name="app_name">OpenMic</string>

    <!-- Icons -->
    <string name="icons_main_phone_ring">Phone Connected Icon</string>
    <string name="icons_main_pc_connected">Computer Icon</string>
    <string name="icons_status_wifi">Wi-Fi Icon</string>
    <string name="icons_status_usb">USB Icon</string>
    <string name="icons_server_os">Operating System Icon</string>

    <!-- Main Activity -->
    <string name="main_page_title">You\'re ready to go!</string>
    <string name="main_status_main">We\'ll try to automatically connect with your PC via:</string>
    <string name="main_status_wifi">Network\n(Wireless)</string>
    <string name="main_status_usb">USB\n(Wired)</string>
    <string name="main_status_wifi_enabled">Looking for servers…</string>
    <string name="main_status_wifi_no_location">Disabled, no permission to use location</string>
    <string name="main_status_wifi_disabled">Not connected to Wi-Fi network</string>
    <string name="main_status_usb_connected">Connected, Cannot find the server</string>
    <string name="main_status_usb_disconnected">Not connected to PC</string>
    <string name="main_status_usb_not_available">USB connection is not available</string>
    <string name="main_page_faq_title">What to do next?</string>
    <string name="main_page_faq">Next steps are done mainly on PC, you can follow tutorial on official site:</string>
    <string name="main_page_btn_tutorial">Tutorial</string>
    <string name="main_page_btn_faq">FAQ</string>

    <!-- Device List -->
    <string name="device_list_title">Select device to connect</string>
    <string name="device_list_desc">We have found following devices running OpenMic Server:</string>
    <string name="device_list_connect">Connect</string>

    <!-- Device Info -->
    <string name="device_info_app_official">Official OpenMic Server</string>
    <string name="device_info_app_version_ok">Latest</string>
    <string name="device_info_app_version_update_available">Not latest</string>
    <string name="device_info_app_version_outdated">Outdated</string>
    <string name="device_info_app_version_future">Future</string>
    <string name="device_info_app_version">%1$s version (%2$s)</string>
    <string name="device_info_trust">%1$s / %2$s</string>
    <string name="device_info_trust_not_trusted">Not trusted</string>

    <!-- Connecting Screen -->
    <string name="connecting_main">Connecting to\n%1$s…</string>
    <string name="connecting_main_address">%1$s:%2$d (Retry %3$d/%4$d)</string>
    <string name="connecting_too_long_title">Hmm…</string>
    <string name="connecting_too_long">This takes much longer than expected, hold on…</string>
</resources>