<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.fragments.main.MainScreen">

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView_Main_Top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:adSize="BANNER"
        app:adUnitId="@string/banner_main_top_unit_id"
        app:layout_constraintBottom_toTopOf="@+id/mainScreen_pageTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mainScreen_pageTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center"
        android:text="@string/main_page_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adView_Main_Top" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainScreen_iconsLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="96dp"
        android:layout_marginLeft="96dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="96dp"
        android:layout_marginRight="96dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/statusContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainScreen_pageTitle">

        <ImageView
            android:id="@+id/ic_phone_ring"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/icons_main_phone_ring"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/ic_computer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_phonelink_ring_24" />

        <ImageView
            android:id="@+id/ic_computer"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/icons_main_pc_connected"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ic_phone_ring"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_baseline_computer_24" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/statusContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainScreen_pageTitle"
        app:layout_constraintVertical_bias="0.63">

        <TextView
            android:id="@+id/statusTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:text="@string/main_status_main"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintBottom_toTopOf="@+id/statusLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TableLayout
            android:id="@+id/statusLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/statusTitle">

            <TableRow
                android:id="@+id/statusWifiLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/statusWifiIcon"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/icons_status_wifi"
                    app:srcCompat="@drawable/ic_baseline_wifi_24"
                    tools:ignore="ImageContrastCheck" />

                <TextView
                    android:id="@+id/statusWifiName"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/main_status_wifi"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    app:autoSizeTextType="uniform" />

                <TextView
                    android:id="@+id/statusWifi"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/main_status_wifi_disabled"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="@color/main_status_not_connected" />
            </TableRow>

            <TableRow
                android:id="@+id/statusUSBLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/statusUSBIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="64dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/icons_status_usb"
                    app:srcCompat="@drawable/ic_baseline_usb_24"
                    tools:ignore="ImageContrastCheck" />

                <TextView
                    android:id="@+id/statusUSBName"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/main_status_usb"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    app:autoSizeTextType="uniform" />

                <TextView
                    android:id="@+id/statusUSB"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/main_status_usb_disconnected"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="@color/main_status_not_connected" />
            </TableRow>

        </TableLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/descriptionLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/adView_Main_Bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statusContainer">

        <TextView
            android:id="@+id/descriptionFaqTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/main_page_faq_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/descriptionFaq"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/main_page_faq"
            app:layout_constraintBottom_toTopOf="@+id/linkLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descriptionFaqTitle" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linkLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descriptionFaq">

            <Button
                android:id="@+id/tutorialBtn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/main_page_btn_tutorial"
                android:textColor="@color/button_borderless_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/faqBtn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/faqBtn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/main_page_btn_faq"
                android:textColor="@color/button_borderless_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tutorialBtn"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView_Main_Bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:adSize="BANNER"
        app:adUnitId="@string/banner_main_bottom_unit_id"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>